# gRPSQLite

./: .dockerignore  Cargo.toml  README.md  build.rs  compile.sh  static_dev.Dockerfile  static_dev.sh  static_dev_test.sql  statis_dev_test.sql
examples/: memory.rs  memory_server.rs  memory_server_no_atomic.rs  memory_server_no_atomic_test.sql  memory_server_test.sql  memory_server_with_checksums.rs  memory_server_with_checksums_test.sql  simple_test.sql  slatedb_memory_server.rs  versioned_memory_server.rs  versioned_memory_server_test.sql
proto/: grpc_vfs.proto
repl-rs/: Cargo.toml  build.rs  repl_history.txt
repl-rs/src/: lib.rs  main.rs
slatedb-server/: Cargo.toml
slatedb-server/src/: main.rs
sqlite_vfs/: Cargo.toml  build.rs  sqlite_with_grpsqlite.c  sqlite_with_memvfs.c
sqlite_vfs/src/: env_config.rs  handle.rs  lib.rs
sqlite_vfs/src/sqlite-plugin/: Cargo.toml
sqlite_vfs/src/sqlite-plugin/src/: vfs.rs
src/: lib.rs  main.rs
