[package]
name = "slatedb-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
prost = "0.13.5"
uuid = { version = "1.17.0", features = ["v4"] }
log = { version = "0.4.27", features = ["std"] }
slatedb = "0.7.0"
grpsqlite = { path = "../" }
